# md-from-code

./: LICENSE  README.md  pyproject.toml
src/md_from_code/: __init__.py  cli.py  core.py  registry.py
src/md_from_code/processors/: __init__.py  base.py  code.py  structured.py
src/md_from_code/templates/: default.md.j2  default_org.md.j2  detailed.md.j2  minimal.md.j2
tests/: __init__.py  test_basic.py
