[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "md-from-code"
version = "0.1.0"
description = "Convert source code files to MkDocs-compatible markdown pages"
readme = "README.md"
license = "MIT"
authors = [
    {name = "MAMS Migration System"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Documentation",
    "Topic :: Software Development :: Documentation",
    "Topic :: Text Processing :: Markup :: Markdown",
]
keywords = ["markdown", "documentation", "mkdocs", "source-code", "code-to-docs"]
requires-python = ">=3.8"
dependencies = [
    "jinja2>=3.0.0",
    "pyyaml>=6.0",
    "click>=8.0.0",
    "rich>=12.0.0",
    "chardet>=5.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/mams-migration/md-from-code"
Documentation = "https://github.com/mams-migration/md-from-code#readme"
Repository = "https://github.com/mams-migration/md-from-code"
Issues = "https://github.com/mams-migration/md-from-code/issues"

[project.scripts]
md-from-code = "md_from_code.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/md_from_code"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/README.md",
    "/LICENSE",
]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["md_from_code"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=md_from_code",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]